[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/images/Background.svg" type="Texture" id=1]
[ext_resource path="res://resources/fonts/gomarice_no_continue.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/GameSelection.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 140
outline_size = 5
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 3
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="GameSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.12, 1 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1680.0
margin_bottom = 141.0
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Selection"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 1680.0
margin_bottom = 596.0
custom_constants/margin_top = 150

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_top = 150.0
margin_right = 1680.0
margin_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="CreateNewLobbyBtn" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
margin_left = 498.0
margin_right = 1181.0
margin_bottom = 87.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
enabled_focus_mode = 0
text = "Create a new lobby"
flat = true

[node name="JoinLobbyBtn" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
margin_left = 506.0
margin_top = 107.0
margin_right = 1174.0
margin_bottom = 194.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
enabled_focus_mode = 0
text = "Join existing lobby"
flat = true

[node name="Back" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
margin_left = 754.0
margin_top = 214.0
margin_right = 925.0
margin_bottom = 301.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
enabled_focus_mode = 0
text = "Back"
flat = true

[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/CreateNewLobbyBtn" to="." method="_on_CreateNewLobbyBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/JoinLobbyBtn" to="." method="_on_JoinLobbyBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/Back" to="." method="_on_Back_pressed"]
